@@ -5,9 +5,13 @@ import static org.junit.Assert.assertEquals;
 import com.orientechnologies.BaseMemoryDatabase;
 import com.orientechnologies.orient.core.exception.OSchemaException;
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 import org.junit.Test;
 
-/** Created by tglman on 01/12/15. */
+/**
+ * Created by tglman on 01/12/15.
+ */
 public class AlterSuperclassTest extends BaseMemoryDatabase {
 
   @Test
@@ -18,11 +22,11 @@ public class AlterSuperclassTest extends BaseMemoryDatabase {
     classA.setAbstract(true);
     OProperty property = classA.createProperty("RevNumberNine", OType.INTEGER);
     OClass classChild = schema.createClass("ChildClass1", classA);
-    assertEquals(classChild.getSuperClasses(), Arrays.asList(classA));
+    assertEquals(classChild.getSuperClasses(), List.of(classA));
     OClass classChild2 = schema.createClass("ChildClass2", classChild);
-    assertEquals(classChild2.getSuperClasses(), Arrays.asList(classChild));
-    classChild2.setSuperClasses(Arrays.asList(classA));
-    assertEquals(classChild2.getSuperClasses(), Arrays.asList(classA));
+    assertEquals(classChild2.getSuperClasses(), List.of(classChild));
+    classChild2.setSuperClasses(List.of(classA));
+    assertEquals(classChild2.getSuperClasses(), List.of(classA));
   }
 
   @Test(expected = OSchemaException.class)
@@ -32,10 +36,10 @@ public class AlterSuperclassTest extends BaseMemoryDatabase {
     classA.setAbstract(true);
     OProperty property = classA.createProperty("RevNumberNine", OType.INTEGER);
     OClass classChild = schema.createClass("ChildClass1", classA);
-    assertEquals(classChild.getSuperClasses(), Arrays.asList(classA));
+    assertEquals(classChild.getSuperClasses(), List.of(classA));
     OClass classChild2 = schema.createClass("ChildClass2");
     classChild2.createProperty("RevNumberNine", OType.STRING);
-    classChild2.setSuperClasses(Arrays.asList(classChild));
+    classChild2.setSuperClasses(List.of(classChild));
   }
 
   @Test(expected = OSchemaException.class)
@@ -43,7 +47,7 @@ public class AlterSuperclassTest extends BaseMemoryDatabase {
     OSchema schema = db.getMetadata().getSchema();
     OClass classA = schema.createClass("ParentClass");
     OClass classChild = schema.createClass("ChildClass1", classA);
-    assertEquals(classChild.getSuperClasses(), Arrays.asList(classA));
+    assertEquals(classChild.getSuperClasses(), Collections.singletonList(classA));
     classChild.addSuperClass(classA);
   }
 
@@ -52,7 +56,7 @@ public class AlterSuperclassTest extends BaseMemoryDatabase {
     OSchema schema = db.getMetadata().getSchema();
     OClass classA = schema.createClass("ParentClass");
     OClass classChild = schema.createClass("ChildClass1", classA);
-    assertEquals(classChild.getSuperClasses(), Arrays.asList(classA));
+    assertEquals(classChild.getSuperClasses(), Collections.singletonList(classA));
     classChild.setSuperClasses(Arrays.asList(classA, classA));
   }
 
