@@ -107,8 +107,8 @@ public class OLuceneSearchMoreLikeThisFunction extends OSQLFunctionAbstract
                   recordId = recordId.copy();
                   return recordId;
                 })
-            .map(id -> id.<ORecord>getRecord())
-            .collect(Collectors.toList());
+            .<ORecord>map(ORecordId::getRecord)
+            .toList();
 
     MoreLikeThis mlt = buildMoreLikeThis(index, searcher, metadata);
 
@@ -126,7 +126,8 @@ public class OLuceneSearchMoreLikeThisFunction extends OSQLFunctionAbstract
             .getInternal()
             .getRids(
                 new OLuceneKeyAndMetadata(
-                    new OLuceneCompositeKey(Arrays.asList(mltQuery.toString())).setContext(ctx),
+                    new OLuceneCompositeKey(Collections.singletonList(mltQuery.toString()))
+                        .setContext(ctx),
                     metadata))) {
       luceneResultSet = rids.collect(Collectors.toSet());
     }
