@@ -25,6 +25,7 @@ import com.orientechnologies.orient.core.command.OCommandContext;
 import com.orientechnologies.orient.core.db.ODatabaseRecordThreadLocal;
 import com.orientechnologies.orient.core.db.ODatabaseSessionInternal;
 import com.orientechnologies.orient.core.db.record.OIdentifiable;
+import com.orientechnologies.orient.core.exception.ORecordNotFoundException;
 import com.orientechnologies.orient.core.id.ORID;
 import com.orientechnologies.orient.core.index.OIndex;
 import com.orientechnologies.orient.core.metadata.schema.OClass;
@@ -38,7 +39,6 @@ import com.orientechnologies.orient.core.sql.operator.OQueryTargetOperator;
 import com.orientechnologies.orient.core.sql.parser.ParseException;
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -229,41 +229,44 @@ public class OLuceneTextOperator extends OQueryTargetOperator {
       Object iLeft,
       Object iRight) {
 
-    ODocument doc = iRecord.getRecord();
-    if (doc.getClassName() != null) {
-      OClass cls = getDatabase().getMetadata().getSchema().getClass(doc.getClassName());
+    try {
+      ODocument doc = iRecord.getRecord();
+      if (doc.getClassName() != null) {
+        OClass cls = getDatabase().getMetadata().getSchema().getClass(doc.getClassName());
 
-      if (isChained(iCondition.getLeft())) {
+        if (isChained(iCondition.getLeft())) {
 
-        OSQLFilterItemField chained = (OSQLFilterItemField) iCondition.getLeft();
+          OSQLFilterItemField chained = (OSQLFilterItemField) iCondition.getLeft();
 
-        OSQLFilterItemField.FieldChain fieldChain = chained.getFieldChain();
-        OClass oClass = cls;
-        for (int i = 0; i < fieldChain.getItemCount() - 1; i++) {
-          oClass = oClass.getProperty(fieldChain.getItemName(i)).getLinkedClass();
+          OSQLFilterItemField.FieldChain fieldChain = chained.getFieldChain();
+          OClass oClass = cls;
+          for (int i = 0; i < fieldChain.getItemCount() - 1; i++) {
+            oClass = oClass.getProperty(fieldChain.getItemName(i)).getLinkedClass();
+          }
+          if (oClass != null) {
+            cls = oClass;
+          }
         }
-        if (oClass != null) {
-          cls = oClass;
+        Set<OIndex> classInvolvedIndexes = cls.getInvolvedIndexes(fields(iCondition));
+        OLuceneFullTextIndex idx = null;
+        for (OIndex classInvolvedIndex : classInvolvedIndexes) {
+
+          if (classInvolvedIndex.getInternal() instanceof OLuceneFullTextIndex) {
+            idx = (OLuceneFullTextIndex) classInvolvedIndex.getInternal();
+            break;
+          }
         }
+        return idx;
+      } else {
+        return null;
       }
-      Set<OIndex> classInvolvedIndexes = cls.getInvolvedIndexes(fields(iCondition));
-      OLuceneFullTextIndex idx = null;
-      for (OIndex classInvolvedIndex : classInvolvedIndexes) {
-
-        if (classInvolvedIndex.getInternal() instanceof OLuceneFullTextIndex) {
-          idx = (OLuceneFullTextIndex) classInvolvedIndex.getInternal();
-          break;
-        }
-      }
-      return idx;
-    } else {
+    } catch (ORecordNotFoundException rnf) {
       return null;
     }
   }
 
   private boolean isChained(Object left) {
-    if (left instanceof OSQLFilterItemField) {
-      OSQLFilterItemField field = (OSQLFilterItemField) left;
+    if (left instanceof OSQLFilterItemField field) {
       return field.isFieldChain();
     }
     return false;
@@ -274,9 +277,8 @@ public class OLuceneTextOperator extends OQueryTargetOperator {
 
     Object left = iCondition.getLeft();
 
-    if (left instanceof String) {
-      String fName = (String) left;
-      return Arrays.asList(fName);
+    if (left instanceof String fName) {
+      return List.of(fName);
     }
     if (left instanceof Collection) {
       Collection<OSQLFilterItemField> f = (Collection<OSQLFilterItemField>) left;
@@ -287,14 +289,13 @@ public class OLuceneTextOperator extends OQueryTargetOperator {
       }
       return fields;
     }
-    if (left instanceof OSQLFilterItemField) {
+    if (left instanceof OSQLFilterItemField fName) {
 
-      OSQLFilterItemField fName = (OSQLFilterItemField) left;
       if (fName.isFieldChain()) {
         int itemCount = fName.getFieldChain().getItemCount();
-        return Arrays.asList(fName.getFieldChain().getItemName(itemCount - 1));
+        return Collections.singletonList(fName.getFieldChain().getItemName(itemCount - 1));
       } else {
-        return Arrays.asList(fName.toString());
+        return Collections.singletonList(fName.toString());
       }
     }
     return Collections.emptyList();
