@@ -89,6 +89,7 @@ import java.net.SocketException;
 import java.net.SocketTimeoutException;
 import java.net.URLDecoder;
 import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Base64;
 import java.util.Date;
@@ -103,8 +104,9 @@ import java.util.zip.GZIPInputStream;
 
 public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
     implements ONetworkHttpExecutor {
+
   private static final String COMMAND_SEPARATOR = "|";
-  private static final Charset utf8 = Charset.forName("utf8");
+  private static final Charset utf8 = StandardCharsets.UTF_8;
   private static int requestMaxContentLength; // MAX = 10Kb
   private static int socketTimeout;
   private final StringBuilder requestContent = new StringBuilder(512);
@@ -137,11 +139,15 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
     final boolean installDefaultCommands =
         iConfiguration.getValueAsBoolean(
             OGlobalConfiguration.NETWORK_HTTP_INSTALL_DEFAULT_COMMANDS);
-    if (installDefaultCommands) registerStatelessCommands(iListener);
+    if (installDefaultCommands) {
+      registerStatelessCommands(iListener);
+    }
 
     final String addHeaders =
         iConfiguration.getValueAsString("network.http.additionalResponseHeaders", null);
-    if (addHeaders != null) additionalResponseHeaders = addHeaders.split(";");
+    if (addHeaders != null) {
+      additionalResponseHeaders = addHeaders.split(";");
+    }
 
     // CREATE THE CLIENT CONNECTION
     connection = iServer.getClientConnectionManager().connect(this);
@@ -181,9 +187,11 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
             .getContextConfiguration()
             .getValueAsBoolean(OGlobalConfiguration.NETWORK_HTTP_JSONP_ENABLED)
         && request.getParameters() != null
-        && request.getParameters().containsKey(OHttpUtils.CALLBACK_PARAMETER_NAME))
+        && request.getParameters().containsKey(OHttpUtils.CALLBACK_PARAMETER_NAME)) {
       callbackF = request.getParameters().get(OHttpUtils.CALLBACK_PARAMETER_NAME);
-    else callbackF = null;
+    } else {
+      callbackF = null;
+    }
 
     response =
         new OHttpResponseImpl(
@@ -230,24 +238,27 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
           request.setParameters(new HashMap<String, String>());
         }
         for (Map.Entry<String, String> entry : requestParams.entrySet()) {
-          request.getParameters().put(entry.getKey(), URLDecoder.decode(entry.getValue(), "UTF-8"));
+          request
+              .getParameters()
+              .put(entry.getKey(), URLDecoder.decode(entry.getValue(), StandardCharsets.UTF_8));
         }
       }
 
-      if (cmd != null)
+      if (cmd != null) {
         try {
-          if (cmd.beforeExecute(request, response))
+          if (cmd.beforeExecute(request, response)) {
             try {
               // EXECUTE THE COMMAND
               isChain = cmd.execute(request, response);
             } finally {
               cmd.afterExecute(request, response);
             }
+          }
 
         } catch (Exception e) {
           handleError(e, request);
         }
-      else {
+      } else {
         try {
           OLogManager.instance()
               .warn(
@@ -257,7 +268,7 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
                       + ": Command not found: "
                       + request.getHttpMethod()
                       + "."
-                      + URLDecoder.decode(command, "UTF-8"));
+                      + URLDecoder.decode(command, StandardCharsets.UTF_8));
 
           sendError(
               OHttpUtils.STATUS_INVALIDMETHOD_CODE,
@@ -310,7 +321,9 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
 
     try {
       // FORCE SOCKET CLOSING
-      if (channel.socket != null) channel.socket.close();
+      if (channel.socket != null) {
+        channel.socket.close();
+      }
     } catch (final Exception e) {
     }
   }
@@ -324,8 +337,9 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
     } finally {
       server.getClientConnectionManager().disconnect(connection.getId());
       OServerPluginHelper.invokeHandlerCallbackOnSocketDestroyed(server, this);
-      if (OLogManager.instance().isDebugEnabled())
+      if (OLogManager.instance().isDebugEnabled()) {
         OLogManager.instance().debug(this, "Connection closed");
+      }
     }
   }
 
@@ -367,8 +381,9 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
   }
 
   protected void handleError(Throwable e, OHttpRequest iRequest) {
-    if (OLogManager.instance().isDebugEnabled())
+    if (OLogManager.instance().isDebugEnabled()) {
       OLogManager.instance().debug(this, "Caught exception", e);
+    }
 
     int errorCode = 500;
     String errorReason = null;
@@ -389,8 +404,9 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
     } else if (e instanceof UnsupportedOperationException) {
       errorCode = OHttpUtils.STATUS_NOTIMPL_CODE;
       errorReason = OHttpUtils.STATUS_NOTIMPL_DESCRIPTION;
-    } else if (e instanceof IllegalArgumentException)
+    } else if (e instanceof IllegalArgumentException) {
       errorCode = OHttpUtils.STATUS_INTERNALERROR_CODE;
+    }
 
     if (e instanceof ODatabaseException
         || e instanceof OSecurityAccessException
@@ -426,7 +442,9 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
           break;
         }
 
-        if (cause != null) e = cause;
+        if (cause != null) {
+          e = cause;
+        }
       } while (cause != null);
     } else if (e instanceof OCommandSQLParsingException) {
       errorMessage = e.getMessage();
@@ -481,7 +499,9 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
     sendStatus(empty && iCode == 200 ? 204 : iCode, iReason);
     sendResponseHeaders(iContentType, iKeepAlive);
 
-    if (iHeaders != null) writeLine(iHeaders);
+    if (iHeaders != null) {
+      writeLine(iHeaders);
+    }
 
     final byte[] binaryContent = empty ? null : iContent.getBytes(utf8);
 
@@ -489,7 +509,9 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
 
     writeLine(null);
 
-    if (binaryContent != null) channel.writeBytes(binaryContent);
+    if (binaryContent != null) {
+      channel.writeBytes(binaryContent);
+    }
     channel.flush();
   }
 
@@ -511,7 +533,9 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
     sendStatus(iCode, iReason);
     sendResponseHeaders(OHttpUtils.CONTENT_JSON, iKeepAlive);
 
-    if (iHeaders != null) writeLine(iHeaders);
+    if (iHeaders != null) {
+      writeLine(iHeaders);
+    }
 
     ODocument response = new ODocument();
     ODocument error = new ODocument();
@@ -531,12 +555,16 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
         OHttpUtils.HEADER_CONTENT_LENGTH + (binaryContent != null ? binaryContent.length : 0));
     writeLine(null);
 
-    if (binaryContent != null) channel.writeBytes(binaryContent);
+    if (binaryContent != null) {
+      channel.writeBytes(binaryContent);
+    }
     channel.flush();
   }
 
   protected void writeLine(final String iContent) throws IOException {
-    if (iContent != null) channel.outStream.write(iContent.getBytes());
+    if (iContent != null) {
+      channel.outStream.write(iContent.getBytes());
+    }
     channel.outStream.write(OHttpUtils.EOL);
   }
 
@@ -552,8 +580,11 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
     writeLine("Content-Type: " + iContentType + "; charset=" + responseCharSet);
     writeLine("Server: OrientDB");
     writeLine("Connection: " + (iKeepAlive ? "Keep-Alive" : "close"));
-    if (getAdditionalResponseHeaders() != null)
-      for (String h : getAdditionalResponseHeaders()) writeLine(h);
+    if (getAdditionalResponseHeaders() != null) {
+      for (String h : getAdditionalResponseHeaders()) {
+        writeLine(h);
+      }
+    }
   }
 
   protected void readAllContent(final OHttpRequest iRequest) throws IOException {
@@ -568,7 +599,9 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
 
     while (!channel.socket.isInputShutdown()) {
       in = channel.read();
-      if (in == -1) break;
+      if (in == -1) {
+        break;
+      }
 
       currChar = (char) in;
 
@@ -619,7 +652,7 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
               line, OHttpUtils.HEADER_CONTENT_LENGTH)) {
             contentLength =
                 Integer.parseInt(line.substring(OHttpUtils.HEADER_CONTENT_LENGTH.length()));
-            if (contentLength > requestMaxContentLength)
+            if (contentLength > requestMaxContentLength) {
               OLogManager.instance()
                   .warn(
                       this,
@@ -629,6 +662,7 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
                           + contentLength
                           + ": the maximum allowed is "
                           + requestMaxContentLength);
+            }
 
           } else if (OStringSerializerHelper.startsWithIgnoreCase(
               line, OHttpUtils.HEADER_CONTENT_TYPE)) {
@@ -637,31 +671,33 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
                 iRequest.getContentType(), OHttpUtils.CONTENT_TYPE_MULTIPART)) {
               iRequest.setMultipart(true);
               iRequest.setBoundary(
-                  new String(
-                      line.substring(
-                          OHttpUtils.HEADER_CONTENT_TYPE.length()
-                              + OHttpUtils.CONTENT_TYPE_MULTIPART.length()
-                              + 2
-                              + OHttpUtils.BOUNDARY.length()
-                              + 1)));
+                  line.substring(
+                      OHttpUtils.HEADER_CONTENT_TYPE.length()
+                          + OHttpUtils.CONTENT_TYPE_MULTIPART.length()
+                          + 2
+                          + OHttpUtils.BOUNDARY.length()
+                          + 1));
             }
-          } else if (OStringSerializerHelper.startsWithIgnoreCase(line, OHttpUtils.HEADER_IF_MATCH))
+          } else if (OStringSerializerHelper.startsWithIgnoreCase(
+              line, OHttpUtils.HEADER_IF_MATCH)) {
             iRequest.setIfMatch(line.substring(OHttpUtils.HEADER_IF_MATCH.length()));
-          else if (OStringSerializerHelper.startsWithIgnoreCase(
-              line, OHttpUtils.HEADER_X_FORWARDED_FOR))
+          } else if (OStringSerializerHelper.startsWithIgnoreCase(
+              line, OHttpUtils.HEADER_X_FORWARDED_FOR)) {
             connection.getData().caller =
                 line.substring(OHttpUtils.HEADER_X_FORWARDED_FOR.length());
-          else if (OStringSerializerHelper.startsWithIgnoreCase(
-              line, OHttpUtils.HEADER_AUTHENTICATION))
+          } else if (OStringSerializerHelper.startsWithIgnoreCase(
+              line, OHttpUtils.HEADER_AUTHENTICATION)) {
             iRequest.setAuthentication(line.substring(OHttpUtils.HEADER_AUTHENTICATION.length()));
-          else if (OStringSerializerHelper.startsWithIgnoreCase(line, "Expect: 100-continue"))
-            // SUPPORT THE CONTINUE TO AUTHORIZE THE CLIENT TO SEND THE CONTENT WITHOUT WAITING THE
-            // DELAY
+          } else if (OStringSerializerHelper.startsWithIgnoreCase(line, "Expect: 100-continue"))
+          // SUPPORT THE CONTINUE TO AUTHORIZE THE CLIENT TO SEND THE CONTENT WITHOUT WAITING THE
+          // DELAY
+          {
             sendTextContent(100, null, null, null, null, iRequest.isKeepAlive());
-          else if (OStringSerializerHelper.startsWithIgnoreCase(
-              line, OHttpUtils.HEADER_CONTENT_ENCODING))
+          } else if (OStringSerializerHelper.startsWithIgnoreCase(
+              line, OHttpUtils.HEADER_CONTENT_ENCODING)) {
             iRequest.setContentEncoding(
                 line.substring(OHttpUtils.HEADER_CONTENT_ENCODING.length()));
+          }
 
           // SAVE THE HEADER
           iRequest.addHeader(line);
@@ -669,12 +705,16 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
 
         // CONSUME /r or /n
         in = channel.read();
-        if (in == -1) break;
+        if (in == -1) {
+          break;
+        }
 
         currChar = (char) in;
 
         if (!endOfHeaders && request.length() == 0) {
-          if (contentLength <= 0) return;
+          if (contentLength <= 0) {
+            return;
+          }
 
           // FIRST BLANK LINE: END OF HEADERS
           endOfHeaders = true;
@@ -702,18 +742,19 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
           }
           return;
         }
-      } else request.append(currChar);
+      } else {
+        request.append(currChar);
+      }
     }
 
-    if (OLogManager.instance().isDebugEnabled())
+    if (OLogManager.instance().isDebugEnabled()) {
       OLogManager.instance()
           .debug(
               this,
               "Error on parsing HTTP content from client %s:\n%s",
               channel.socket.getInetAddress().getHostAddress(),
               request);
-
-    return;
+    }
   }
 
   @Override
@@ -746,8 +787,10 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
       request.setMultipart(false);
 
       if (c != '\n')
-        // AVOID INITIAL /N
+      // AVOID INITIAL /N
+      {
         requestContent.append(c);
+      }
 
       while (!channel.socket.isInputShutdown()) {
         c = (char) channel.read();
@@ -786,16 +829,19 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
 
           if (request.getContent() != null
               && request.getContentType() != null
-              && request.getContentType().equals(OHttpUtils.CONTENT_TYPE_URLENCODED))
-            request.setContent(URLDecoder.decode(request.getContent(), "UTF-8").trim());
+              && request.getContentType().equals(OHttpUtils.CONTENT_TYPE_URLENCODED)) {
+            request.setContent(
+                URLDecoder.decode(request.getContent(), StandardCharsets.UTF_8).trim());
+          }
 
-          if (OLogManager.instance().isDebugEnabled())
+          if (OLogManager.instance().isDebugEnabled()) {
             OLogManager.instance()
                 .debug(
                     this,
                     "[ONetworkProtocolHttpAbstract.execute] Requested: %s %s",
                     request.getHttpMethod(),
                     request.getUrl());
+          }
 
           service();
           return;
@@ -814,7 +860,7 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
         }
       }
 
-      if (OLogManager.instance().isDebugEnabled())
+      if (OLogManager.instance().isDebugEnabled()) {
         OLogManager.instance()
             .debug(
                 this,
@@ -822,6 +868,7 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
                     + channel.socket.getInetAddress().getHostAddress()
                     + ":\n"
                     + requestContent);
+      }
 
     } catch (SocketException e) {
       connectionError();
@@ -844,7 +891,7 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
               request.isKeepAlive());
         } catch (IOException e) {
         }
-      } else
+      } else {
         sendError(
             505,
             "Error on executing request",
@@ -852,10 +899,11 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
             "text/plain",
             t.toString(),
             request.isKeepAlive());
+      }
 
       readAllContent(request);
     } finally {
-      if (connection.getStats().lastCommandReceived > -1)
+      if (connection.getStats().lastCommandReceived > -1) {
         Orient.instance()
             .getProfiler()
             .stopChrono(
@@ -863,6 +911,7 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
                 "Total received requests",
                 connection.getStats().lastCommandReceived,
                 "server.network.requests");
+      }
 
       request = null;
       response = null;
@@ -870,7 +919,9 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
   }
 
   protected String deCompress(byte[] zipBytes) {
-    if (zipBytes == null || zipBytes.length == 0) return null;
+    if (zipBytes == null || zipBytes.length == 0) {
+      return null;
+    }
     GZIPInputStream gzip = null;
     ByteArrayInputStream in = null;
     ByteArrayOutputStream baos = null;
@@ -883,15 +934,21 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
       while ((len = gzip.read(buffer, 0, buffer.length)) != -1) {
         baos.write(buffer, 0, len);
       }
-      String newstr = new String(baos.toByteArray(), "UTF-8");
+      String newstr = baos.toString(StandardCharsets.UTF_8);
       return newstr;
     } catch (Exception ex) {
       OLogManager.instance().error(this, "Error on decompressing HTTP response", ex);
     } finally {
       try {
-        if (gzip != null) gzip.close();
-        if (in != null) in.close();
-        if (baos != null) baos.close();
+        if (gzip != null) {
+          gzip.close();
+        }
+        if (in != null) {
+          in.close();
+        }
+        if (baos != null) {
+          baos.close();
+        }
       } catch (Exception ex) {
       }
     }
@@ -983,15 +1040,18 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
     cmdManager.registerCommand(new OServerCommandGetSSO());
     cmdManager.registerCommand(new OServerCommandGetPing());
 
-    for (OServerCommandConfiguration c : iListener.getStatefulCommands())
+    for (OServerCommandConfiguration c : iListener.getStatefulCommands()) {
       try {
         cmdManager.registerCommand(OServerNetworkListener.createCommand(server, c));
       } catch (Exception e) {
         OLogManager.instance()
             .error(caller, "Error on creating stateful command '%s'", e, c.implementation);
       }
+    }
 
-    for (OServerCommand c : iListener.getStatelessCommands()) cmdManager.registerCommand(c);
+    for (OServerCommand c : iListener.getStatelessCommands()) {
+      cmdManager.registerCommand(c);
+    }
   }
 
   protected void registerStatelessCommands(final OServerNetworkListener iListener) {
@@ -1012,8 +1072,11 @@ public abstract class ONetworkProtocolHttpAbstract extends ONetworkProtocol
     commandString.append(method);
     commandString.append(COMMAND_SEPARATOR);
 
-    if (getQueryPosition > -1) commandString.append(command.substring(0, getQueryPosition));
-    else commandString.append(command);
+    if (getQueryPosition > -1) {
+      commandString.append(command, 0, getQueryPosition);
+    } else {
+      commandString.append(command);
+    }
     return commandString.toString();
   }
 
