@@ -33,11 +33,10 @@ import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.FileInputStream;
-import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -45,6 +44,7 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.zip.GZIPOutputStream;
 
 public class OServerCommandGetStaticContent extends OServerCommandConfigurableAbstract {
+
   private static final String[] DEF_PATTERN = {
     "GET|www",
     "GET|studio/",
@@ -68,16 +68,17 @@ public class OServerCommandGetStaticContent extends OServerCommandConfigurableAb
   private static final String CONFIG_ROOT_PATH = "root.path";
   private static final String CONFIG_FILE_PATH = "file.path";
 
-  private ConcurrentHashMap<String, OStaticContentCachedEntry> cacheContents =
+  private final ConcurrentHashMap<String, OStaticContentCachedEntry> cacheContents =
       new ConcurrentHashMap<String, OStaticContentCachedEntry>();
-  private Map<String, String> cacheHttp = new HashMap<String, String>();
+  private final Map<String, String> cacheHttp = new HashMap<String, String>();
   private String cacheHttpDefault = "Cache-Control: max-age=3000";
   private String rootPath;
   private String filePath;
-  private ConcurrentHashMap<String, OCallable<Object, String>> virtualFolders =
+  private final ConcurrentHashMap<String, OCallable<Object, String>> virtualFolders =
       new ConcurrentHashMap<String, OCallable<Object, String>>();
 
   public static class OStaticContent {
+
     public InputStream is = null;
     public long contentSize = 0;
     public String type = null;
@@ -94,15 +95,19 @@ public class OServerCommandGetStaticContent extends OServerCommandConfigurableAb
     for (OServerEntryConfiguration par : iConfiguration.parameters) {
       if (par.name.startsWith(CONFIG_HTTP_CACHE)) {
         final String filter = par.name.substring(CONFIG_HTTP_CACHE.length());
-        if (filter.equalsIgnoreCase("default")) cacheHttpDefault = par.value;
-        else if (filter.length() > 0) {
+        if (filter.equalsIgnoreCase("default")) {
+          cacheHttpDefault = par.value;
+        } else if (filter.length() > 0) {
           final String[] filters = filter.split(" ");
           for (String f : filters) {
             cacheHttp.put(f, par.value);
           }
         }
-      } else if (par.name.startsWith(CONFIG_ROOT_PATH)) rootPath = par.value;
-      else if (par.name.startsWith(CONFIG_FILE_PATH)) filePath = par.value;
+      } else if (par.name.startsWith(CONFIG_ROOT_PATH)) {
+        rootPath = par.value;
+      } else if (par.name.startsWith(CONFIG_FILE_PATH)) {
+        filePath = par.value;
+      }
     }
   }
 
@@ -184,12 +189,13 @@ public class OServerCommandGetStaticContent extends OServerCommandConfigurableAb
       OLogManager.instance().error(this, "Error on loading resource %s", e, iRequest.getUrl());
 
     } finally {
-      if (staticContent != null && staticContent.is != null)
+      if (staticContent != null && staticContent.is != null) {
         try {
           staticContent.is.close();
         } catch (IOException e) {
           OLogManager.instance().warn(this, "Error on closing file", e);
         }
+      }
     }
     return false;
   }
@@ -204,11 +210,15 @@ public class OServerCommandGetStaticContent extends OServerCommandConfigurableAb
 
   protected String getResource(final OHttpRequest iRequest) {
     final String url;
-    if (OHttpUtils.URL_SEPARATOR.equals(iRequest.getUrl())) url = "/www/index.htm";
-    else {
+    if (OHttpUtils.URL_SEPARATOR.equals(iRequest.getUrl())) {
+      url = "/www/index.htm";
+    } else {
       int pos = iRequest.getUrl().indexOf('?');
-      if (pos > -1) url = iRequest.getUrl().substring(0, pos);
-      else url = iRequest.getUrl();
+      if (pos > -1) {
+        url = iRequest.getUrl().substring(0, pos);
+      } else {
+        url = iRequest.getUrl();
+      }
     }
     return url;
   }
@@ -216,7 +226,7 @@ public class OServerCommandGetStaticContent extends OServerCommandConfigurableAb
   protected OStaticContent getVirtualFolderContent(final OHttpRequest iRequest) {
     if (iRequest.getUrl() != null) {
       final int beginPos = iRequest.getUrl().startsWith("/") ? 1 : 0;
-      final int endPos = iRequest.getUrl().indexOf("/", beginPos);
+      final int endPos = iRequest.getUrl().indexOf('/', beginPos);
       final String firstFolderName =
           endPos > -1
               ? iRequest.getUrl().substring(beginPos, endPos)
@@ -226,11 +236,13 @@ public class OServerCommandGetStaticContent extends OServerCommandConfigurableAb
         // DELEGATE TO THE CALLBACK
         final Object content =
             virtualFolderCallback.call(endPos > -1 ? iRequest.getUrl().substring(endPos + 1) : "");
-        if (content == null) return null;
+        if (content == null) {
+          return null;
+        }
 
-        if (content instanceof OStaticContent) return (OStaticContent) content;
-        else if (content instanceof String) {
-          final String contentString = (String) content;
+        if (content instanceof OStaticContent) {
+          return (OStaticContent) content;
+        } else if (content instanceof String contentString) {
           final OStaticContent sc = new OStaticContent();
           sc.is = new ByteArrayInputStream(contentString.getBytes());
           sc.contentSize = contentString.length();
@@ -245,7 +257,7 @@ public class OServerCommandGetStaticContent extends OServerCommandConfigurableAb
       final OHttpRequest iRequest,
       final OHttpResponse iResponse,
       final OStaticContent staticContent)
-      throws UnsupportedEncodingException, IOException, FileNotFoundException {
+      throws IOException {
     if (filePath == null && rootPath == null) {
       // GET GLOBAL CONFIG
       rootPath = iRequest.getConfiguration().getValueAsString("orientdb.www.path", "src/site");
@@ -263,26 +275,32 @@ public class OServerCommandGetStaticContent extends OServerCommandConfigurableAb
     if (filePath == null) {
       // CHECK DIRECTORY
       final File wwwPathDirectory = new File(rootPath);
-      if (!wwwPathDirectory.exists())
+      if (!wwwPathDirectory.exists()) {
         OLogManager.instance()
             .warn(this, "path variable points to '%s' but it doesn't exists", rootPath);
-      if (!wwwPathDirectory.isDirectory())
+      }
+      if (!wwwPathDirectory.isDirectory()) {
         OLogManager.instance()
             .warn(this, "path variable points to '%s' but it isn't a directory", rootPath);
+      }
     }
 
     String path;
     if (filePath != null)
-      // SINGLE FILE
+    // SINGLE FILE
+    {
       path = filePath;
-    else {
+    } else {
       // GET FROM A DIRECTORY
       final String url = getResource(iRequest);
-      if (url.startsWith("/www")) path = rootPath + url.substring("/www".length(), url.length());
-      else path = rootPath + url;
+      if (url.startsWith("/www")) {
+        path = rootPath + url.substring("/www".length());
+      } else {
+        path = rootPath + url;
+      }
     }
 
-    path = URLDecoder.decode(path, "UTF-8");
+    path = URLDecoder.decode(path, StandardCharsets.UTF_8);
 
     if (path.contains("..")) {
       iResponse.sendStream(404, "File not found", null, null, 0);
@@ -311,10 +329,13 @@ public class OServerCommandGetStaticContent extends OServerCommandConfigurableAb
 
       if (filePath == null && inputFile.isDirectory()) {
         inputFile = new File(path + "/index.htm");
-        if (inputFile.exists()) path = path + "/index.htm";
-        else {
+        if (inputFile.exists()) {
+          path = path + "/index.htm";
+        } else {
           inputFile = new File(path + "/index.html");
-          if (inputFile.exists()) path = path + "/index.html";
+          if (inputFile.exists()) {
+            path = path + "/index.html";
+          }
         }
       }
 
@@ -328,8 +349,9 @@ public class OServerCommandGetStaticContent extends OServerCommandConfigurableAb
           .getValueAsBoolean(OGlobalConfiguration.SERVER_CACHE_FILE_STATIC)) {
         // READ THE ENTIRE STREAM AND CACHE IT IN MEMORY
         final byte[] buffer = new byte[(int) staticContent.contentSize];
-        for (int i = 0; i < staticContent.contentSize; ++i)
+        for (int i = 0; i < staticContent.contentSize; ++i) {
           buffer[i] = (byte) staticContent.is.read();
+        }
 
         OStaticContentCachedEntry cachedEntry = new OStaticContentCachedEntry();
         cachedEntry.content = buffer;
@@ -344,13 +366,21 @@ public class OServerCommandGetStaticContent extends OServerCommandConfigurableAb
   }
 
   public static String getContentType(final String path) {
-    if (path.endsWith(".htm") || path.endsWith(".html")) return "text/html";
-    else if (path.endsWith(".png")) return "image/png";
-    else if (path.endsWith(".jpeg")) return "image/jpeg";
-    else if (path.endsWith(".js")) return "application/x-javascript";
-    else if (path.endsWith(".css")) return "text/css";
-    else if (path.endsWith(".ico")) return "image/x-icon";
-    else if (path.endsWith(".otf")) return "font/opentype";
+    if (path.endsWith(".htm") || path.endsWith(".html")) {
+      return "text/html";
+    } else if (path.endsWith(".png")) {
+      return "image/png";
+    } else if (path.endsWith(".jpeg")) {
+      return "image/jpeg";
+    } else if (path.endsWith(".js")) {
+      return "application/x-javascript";
+    } else if (path.endsWith(".css")) {
+      return "text/css";
+    } else if (path.endsWith(".ico")) {
+      return "image/x-icon";
+    } else if (path.endsWith(".otf")) {
+      return "font/opentype";
+    }
 
     return "text/plain";
   }
